# rust-firebase

./: Cargo.toml  LICENSE  README.md
examples/: delete_data.rs  get_async.rs  get_data.rs  push_data.rs  put_data.rs  set_data.rs  update_data.rs
src/: lib.rs  util.rs
tests/: lib.rs
