[package]

name = "firebase"
version = "0.8.0"
description = "Rust based library for working with Firebase, currently still under heavy development"
readme = "README.md"
repository = "https://github.com/davidrhyswhite/rust-firebase"
license = "MIT"
authors = ["David White <david.white@spry-soft.com>", "Michael Eden <themichaeleden@gmail.com>"]
exclude = ["examples/*", "tests/*"]
keywords = ["firebase", "rest", "api"]

[dependencies]
url  = "0.2.35"
curl = "0.2.10"

