[package]

name = "firebase"
version = "0.9.1"
description = "Rust based library for working with Firebase, currently still under heavy development"
readme = "README.md"
repository = "https://github.com/davidrhyswhite/rust-firebase"
documentation = "http://icanteden.com/rust-firebase/firebase/index.html"
license = "MIT"
authors = ["David White <david.white@spry-soft.com>", "Michael Eden <themichaeleden@gmail.com>"]
exclude = ["examples/*", "tests/*"]
keywords = ["firebase", "rest", "api"]

[dependencies]
url  = "0.5"
hyper = "0.7"
rustc-serialize = "0.3"
